# PRISM-Delta

./: CLAUDE.md  CLAUDE_INSTRUCTIONS.md  Cargo.toml  DOCKER_README.md  Dockerfile  HANDOFF_SOTA_MD_VALIDATION.md  README.md  RELEASE_NOTES_v1.2.0.md  SESSION_START.md  docker-compose.yml  does this help
.claude/: HANDOFF_2026-01-18_PRISM-PREP.md
.claude/plans/: explicit-solvent-full-implementation.md  performance-optimization-phases-7-8.md
.obsidian/vault/: PRISM Dashboard.md
crates/prism-gpu/: build.rs
crates/prism-physics/: Cargo.toml
crates/prism-validation/: Cargo.toml
crates/prism-validation/src/: apo_holo_benchmark.rs  benchmark_integration.rs  blind_validation_pipeline.rs  ensemble_pocket_detector.rs  escape_resistance_scorer.rs  gpu_zro_cryptic_scorer.rs  hmc_refined_ensemble.rs  lib.rs  oligomer_topology.rs  pipeline.rs  simulation_runner.rs
crates/prism-validation/src/chemistry/: protonation.rs
crates/prism-validation/src/gpu_tests/: gpu_scorer_tests.rs
crates/prism-validation/src/sampling/: result.rs
crates/prism-validation/src/sampling/paths/: amber_path.rs  nova_path.rs
crates/prism-validation/src/sampling/router/: hybrid_sampler.rs
data/curated_14/: STRUCTURE_ANALYSIS.md
data/production/: biosecurity_manifest.json
data/simd_test_suite/: fix_amber_names.py  fix_pdbs.py  generate_topologies.sh  prmtop_to_json.py
data/topologies/: 6M0J_RBD_explicit.json  6M0J_RBD_topology.json
data/virology_cryptic/: .gitignore  manifest.json
docs/: PRISM_PREP.md
publication/: PRISM4D_Publication_Report.md
publication/data/: analysis_summary.json  rmsd_timeseries.csv  rmsf_per_residue.csv
publication/figures/: generate_figures_chimerax.cxc  generate_figures_pymol.pml
publication/tables/: Table1_simulation_parameters.csv  Table1_simulation_parameters.tex  Table2_system_composition.csv  Table2_system_composition.tex  (+6 more)
results/: 6M0J_RBD_cryptic_analysis_corrected.json  json_to_pymol.py  phase6_sota_plan.md  phase7_8_sota_plan.md  pocketminer_ensemble_benchmark.json  print_binding_sites.py  print_predictions.py  visualize_binding_sites.pml  visualize_binding_sites_with_output.pml
scripts/: amber_prepare.sh  combine_chain_topologies.py  init_phase6_session.sh  multichain_preprocessor.py  phase6_compliance_check.sh  prepare_protein.py  prism-prep  stage1_sanitize_amber.py  stage1_sanitize_hybrid.py  stage2_topology.py  validate_structure.py
validation_results/: validation_report_20260109_044609.json  validation_report_20260109_044609.md  validation_summary_20260109_044609.json
(+69 files in other folders)
