[package]
name = "prism-validation"
version = "0.1.0"
edition = "2021"
description = "PRISM-4D validation framework for dynamics and cryptic pocket benchmarks"
authors = ["PRISM Team"]

[dependencies]
# GPU dependencies - optional for curation-only builds
prism-gpu = { path = "../prism-gpu", optional = true }
prism-core = { path = "../prism-core", optional = true }
prism-physics = { path = "../prism-physics", optional = true }
cudarc = { version = "0.18", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async and error handling
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Numerics
nalgebra = "0.32"
ndarray = "0.15"
statrs = "0.16"

# Logging
log = "0.4"
env_logger = "0.10"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptographic hashing
blake3 = "1.5"

# HTTP client for PDB downloads
reqwest = { version = "0.11", features = ["json"] }

# File handling
glob = "0.3"
walkdir = "2.4"

# Progress bars
indicatif = "0.17"

[features]
default = []
cuda = ["prism-gpu/cuda", "prism-gpu", "cudarc"]
full = ["prism-gpu", "prism-core", "prism-physics", "cudarc"]
simulation = ["prism-gpu", "prism-physics", "cudarc"]

[[bin]]
name = "prism-validate"
path = "src/bin/validate.rs"

[[bin]]
name = "prism-curate"
path = "src/bin/curate.rs"

[[bin]]
name = "prism-run-validation"
path = "src/bin/run_validation.rs"

[[bin]]
name = "prism-validate-physics"
path = "src/bin/validate_with_physics.rs"
required-features = ["simulation"]

[[bin]]
name = "prism-atlas"
path = "src/bin/run_atlas.rs"

[[bin]]
name = "prism-bench"
path = "src/bin/run_prism_bench.rs"

[[bin]]
name = "prism-bench-real"
path = "src/bin/run_prism_bench_real.rs"
required-features = ["simulation"]

[[bin]]
name = "run-dynamics-bench"
path = "src/bin/run_dynamics_bench.rs"
required-features = ["prism-physics"]

[[bin]]
name = "acquire-data"
path = "src/bin/acquire_data.rs"

[[bin]]
name = "run-heterogeneous-bench"
path = "src/bin/run_heterogeneous_bench.rs"
required-features = ["prism-physics"]

[[bin]]
name = "gnm-ablation"
path = "src/bin/gnm_ablation.rs"
required-features = ["prism-physics"]

[[bin]]
name = "gnm-breakthrough"
path = "src/bin/gnm_breakthrough.rs"

[[bin]]
name = "gnm-chemistry-bench"
path = "src/bin/gnm_chemistry_bench.rs"
required-features = ["prism-physics"]
